# veloxq_sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-wiki.yml  python-tests.yml
docs/: index.md  solvers-and-backends.md
examples/: P2_CBFM-P.txt
veloxq_sdk/: __init__.py  backends.py  config.py  http.py  hybrid.py  jobs.py  problems.py  samplers.py  solvers.py
veloxq_sdk/api/: backends.py  base.py  jobs.py  problems.py  samplers.py  solvers.py
veloxq_sdk/api/core/: base.py  http.py
veloxq_sdk/api/core/tests/: conftest.py  test_http.py
veloxq_sdk/api/tests/: conftest.py  test_jobs.py  test_problems.py  test_solvers.py
veloxq_sdk/api/tests/data/: instances.py  test.h5
wiki/: Home.md  configuration.md  jobs.md  plgrid.md  problems-and-files.md  results.md
