[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.5.0"]
build-backend = "hatchling.build"

[project]
name = "veloxq_sdk"
description = ""
requires-python = ">=3.9"
authors = [
    {name="Hendrik D Louzada", email="hendriklouzada@qmz.ai"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",

    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",

    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version", "urls"]
dependencies = [
    "python-dateutil>=2.8.0",
    "traitlets>=5.0.0",
    "httpx>=0.28.0",
    "websockets>=13.0.0",
    "yarl>=1.15.0",
    "h5py>=3.11.0",
    "pydantic>=2.0.0",
    "dimod>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "veloxq_sdk/_version.py"

[tool.hatch.build.targets.wheel]
exclude = [
    "**/tests"
]

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/quantumz-io/veloxq_sdk"
source_archive = "https://github.com/quantumz-io/veloxq_sdk/archive/{commit_hash}.zip"

[tool.ruff]
target-version = "py39"
select = ["ALL"]
ignore = [
    "FURB122"  # Allow IOBase.write in a for loop.
]
line-length = 88

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
